fix(KP): fix huge font size when checking app info on small screens

--- a/kinopoisk/src/components/AboutWindow/_aboutWindow.sass
+++ b/kinopoisk/src/components/AboutWindow/_aboutWindow.sass
@@ -1,3 +1,6 @@
+@import "../../Sass/_variables.sass"
+@import "../../Sass/_root.sass"
+  
 .AboutWindow
   position: fixed
   top: 0
@@ -13,4 +16,8 @@
 
   background: rgba(128, 128, 128, 0.5)
 
-  font-size: 60px
+  font-size: 16px
+
+  @media screen and (min-width: $screen-md) 
+    font:
+      size: 24px
