--- a/kinopoisk/src/components/AppInfo/_appInfo.sass
+++ b/kinopoisk/src/components/AppInfo/_appInfo.sass
@@ -17,25 +17,25 @@
     margin-bottom: 1rem
 
     font:
-      size: 2rem
+      size: 1em
     text-align: center
 
   &__text
     font:
-      size: 1.25rem
-    line-height: 1.5rem
-    text-indent: 3rem
+      size: 0.75em
+    line-height: 1.25em
+    text-indent: 3em
 
   &__list
-    margin-bottom: 1rem
+    margin-bottom: 1em
     padding-left: 20px
 
     list-style-type: disc
 
   &__li
     font:
-      size: 1.25rem
-    line-height: 1.5rem
+      size: 0.75em
+    line-height: 1.25em
 
   &__link
     color: $dark-blue
